LCP fix, defer GTM/GA, content restore, expanded FAQ

--- a/src/404.njk
+++ b/src/404.njk
@@ -6,6 +6,7 @@ canonical: https://pvcoutlet.gr/404.html
 h1: Η σελίδα που ψάχνετε δεν υπάρχει
 permalink: /404.html
 excludeFromSitemap: true
+bodyClass: page-404
 ---
 
 <div class="mainsl" id="eikona">
