--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -30,19 +30,24 @@
     <div class="column">
       <div class="pvch2"><h4>Χρήσιμα Links</h4></div>
       <div class="pvcdesc">
-        <a title="Κουφώματα Ramplast" href="https://en.ramplast.ro/">Κουφώματα Ramplast</a>
-        <a title="Κουφώματα Rehau" href="https://www.rehau.com/gr-el">Κουφώματα Rehau</a>
-        <a title="Κουφώματα Koemmerling" href="https://www.koemmerling.gr/gr/">Κουφώματα Koemmerling</a>
-        <a title="Εξοικονόμηση κατ' οίκον ΙΙ" href="https://exoikonomisi.ypen.gr/">Εξοικονόμηση κατ' οίκον ΙΙ</a>
-        <a title="κατάλογος pvcoutlet" href="https://issuu.com/pvcoutlet-koufomata">Δείτε τον κατάλογο</a>
+        <a title="PVC Stockhouse" href="{{ site.url }}/pvc-stockhouse/">PVC Stockhouse</a>
+        <a title="Κουφώματα Ramplast" href="https://en.ramplast.ro/" target="_blank" rel="noopener noreferrer">Κουφώματα Ramplast</a>
+        <a title="Κουφώματα Rehau" href="https://www.rehau.com/gr-el" target="_blank" rel="noopener noreferrer">Κουφώματα Rehau</a>
+        <a title="Κουφώματα Koemmerling" href="https://www.koemmerling.gr/gr/" target="_blank" rel="noopener noreferrer">Κουφώματα Koemmerling</a>
+        <a title="Εξοικονόμηση κατ' οίκον ΙΙ" href="https://exoikonomisi.ypen.gr/" target="_blank" rel="noopener noreferrer">Εξοικονόμηση κατ' οίκον ΙΙ</a>
+        <a title="κατάλογος pvcoutlet" href="https://issuu.com/pvcoutlet-koufomata" target="_blank" rel="noopener noreferrer">Δείτε τον κατάλογο</a>
+        <a title="Έργα πελατών" href="{{ site.url }}/erga-pelaton/">Έργα πελατών</a>
+        <a title="Κουφώματα Wiki" href="https://el.wikipedia.org/wiki/Κουφώματα" target="_blank" rel="noopener noreferrer">Κουφώματα Wiki</a>
       </div>
     </div>
     <div class="column">
       <div class="pvch2"><h4>Social Media</h4></div>
       <div class="pvcdesc">
-        <a title="Facebook pvcoutlet" href="https://www.facebook.com/pvcoutlet">Facebook</a>
-        <a title="Instagram pvcoutlet" href="https://www.instagram.com/pvcoutlet">Instagram</a>
-        <a title="Youtube pvcoutlet" href="https://www.youtube.com/channel/UChbFoqc-zPmvKuhAbdKAiew">Youtube</a>
+        <a title="Facebook pvcoutlet" href="https://www.facebook.com/pvcoutlet" target="_blank" rel="noopener noreferrer">Facebook</a>
+        <a title="Instagram pvcoutlet" href="https://www.instagram.com/pvcoutlet" target="_blank" rel="noopener noreferrer">Instagram</a>
+        <a title="Youtube pvcoutlet" href="https://www.youtube.com/channel/UChbFoqc-zPmvKuhAbdKAiew" target="_blank" rel="noopener noreferrer">Youtube</a>
+        <a title="Twitter pvcoutlet" href="https://twitter.com/pvcoutlet" target="_blank" rel="noopener noreferrer">Twitter</a>
+        <a title="Pinterest pvcoutlet" href="https://www.pinterest.com/pvcoutlet" target="_blank" rel="noopener noreferrer">Pinterest</a>
       </div>
     </div>
   </div>
@@ -50,7 +55,7 @@
 <div class="subfooter">
   <a href="{{ site.url }}/"><img alt="κουφώματα pvc {{ site.name }}" src="{{ site.url }}/img/pvcoutlet-logo.webp" width="200" height="40" loading="lazy"></a>
   <small>POWERED BY</small><br/>
-  <strong style="margin:10px;"><a href="https://technopan.gr/" title="ΤΕΧΝΟΠΑΝ κουφώματα PVC">ΤΕΧΝΟΠΑΝ</a></strong>
+  <strong style="margin:10px;"><a href="https://technopan.gr/" title="ΤΕΧΝΟΠΑΝ κουφώματα PVC" target="_blank" rel="noopener noreferrer">ΤΕΧΝΟΠΑΝ</a></strong>
   <p>Συνθετικά κουφώματα pvc, παράθυρα pvc, μπαλκονόπορτες pvc, ρολά και σίτες σε χαμηλές τιμές. Πανελλαδική παράδοση. Επικοινωνήστε για προσφορά.</p>
   <nav class="internal-links" aria-label="Εσωτερικοί σύνδεσμοι">
     {% for link in internalLinks %}
