--- a/src/_includes/home-content.njk
+++ b/src/_includes/home-content.njk
@@ -12,7 +12,7 @@
       <div class="column bbl"><br/>
         <img src="/img/savings.svg" class="sssvv" alt="Εξοικονόμηση" width="50" height="50" loading="lazy">
         <p class="centroio nname lllb">ΕΞΟΙΚΟΝΟΜΙΣΗ ΚΑΤ' ΟΙΚΟΝ</p><br/>
-        <p class="centroio wwt">Ανακαινίστε τα κουφώματά σας με ώφελος από το πρόγραμμα <a style="color:#00afed" href="https://exoikonomisi.ypen.gr/">«Εξοικονόμηση κατ΄ Οίκον ΙΙ»</a> με <span class="nname">μειωμένο κόστος αναβάθμισης</span> και αντικατάσταση κουφωμάτων.</p>
+        <p class="centroio wwt">Ανακαινίστε τα κουφώματά σας με ώφελος από το πρόγραμμα <a style="color:#00afed" href="https://exoikonomisi.ypen.gr/" target="_blank" rel="noopener noreferrer">«Εξοικονόμηση κατ΄ Οίκον ΙΙ»</a> με <span class="nname">μειωμένο κόστος αναβάθμισης</span> και αντικατάσταση κουφωμάτων.</p>
       </div>
       <div class="column bbl"><br/>
         <img src="/img/transfer.svg" class="sssvv" alt="Μεταφορά" width="50" height="50" loading="lazy">
@@ -23,7 +23,7 @@
   </section>
 
   <h2 class="titlos2"><a title="συνθετικά παράθυρα από pvc" href="/pvc-parathira/">PVC Κουφώματα | Παράθυρα</a></h2>
-  <p class="basii">Προσφέρουμε <strong>PVC κουφώματα σε μεγάλη ποικιλία και ευρεία γκάμα χρωμάτων.</strong> Στην PVCOUTLET® θα βρείτε μονόφυλλα και δίφυλλα <strong>παράθυρα pvc</strong> για σαλόνι, υπνοδωμάτια, μπάνιο και κουζίνα. Τα <span class="nname">pvc παράθυρα</span> έχουν διπλά ενεργειακά τζάμια 24mm 4 εποχών, ακουστικά χερούλια και αντιδιαρρηκτική προστασία.</p>
+  <p class="basii">Προσφέρουμε <strong><a href="/pvc-parathira/" title="παράθυρα pvc τιμές">PVC κουφώματα</a> σε μεγάλη ποικιλία και ευρεία γκάμα χρωμάτων.</strong> Στην PVCOUTLET® θα βρείτε μονόφυλλα και δίφυλλα <strong><a href="/pvc-parathira/" title="παράθυρα pvc">παράθυρα pvc</a></strong> για σαλόνι, υπνοδωμάτια, μπάνιο και κουζίνα. Τα <span class="nname">pvc παράθυρα</span> έχουν διπλά ενεργειακά τζάμια 24mm 4 εποχών, ακουστικά χερούλια και αντιδιαρρηκτική προστασία.</p>
   <div class="row">
     <div class="column">
       {% image "img/parathiro-pvc-pvcoutlet.webp", "Παράθυρο pvc", 400, 300, "", "lazy" %}
@@ -40,6 +40,7 @@
       <div class="pvcdesc">
         <a class="hed4" title="παράθυρα pvc μπάνιου" href="/pvc-parathira/">Μονόφυλλα παράθυρα μπάνιου pvc</a>
         <a class="hed4" title="Δίφυλλα παράθυρα μπάνιου pvc" href="/pvc-parathira/">Δίφυλλα παράθυρα μπάνιου pvc</a>
+        <a class="hed4" title="Ειδικές κατασκευές μπάνιου pvc" href="/pvc-parathira/">Ειδικές κατασκευές μπάνιου pvc</a>
       </div>
     </div>
     <div class="column">
@@ -48,6 +49,7 @@
       <div class="pvcdesc">
         <a class="hed4" title="Μονόφυλλα παράθυρα κουζίνας pvc" href="/pvc-parathira/">Μονόφυλλα παράθυρα κουζίνας pvc</a>
         <a class="hed4" title="Δίφυλλα παράθυρα κουζίνας pvc" href="/pvc-parathira/">Δίφυλλα παράθυρα κουζίνας pvc</a>
+        <a class="hed4" title="Ειδικές κατασκευές παραθύρων κουζίνας pvc" href="/pvc-parathira/">Ειδικές κατασκευές παραθύρων κουζίνας pvc</a>
       </div>
     </div>
   </div>
@@ -63,6 +65,7 @@
       <div class="pvcdesc">
         <a class="hed4" title="Μονόφυλλες πόρτες pvc" href="/pvc-balkonoportes/">Μονόφυλλες πόρτες pvc</a>
         <a class="hed4" title="Δίφυλλες πόρτες pvc" href="/pvc-balkonoportes/">Δίφυλλες πόρτες pvc</a>
+        <a class="hed4" title="Ειδικές κατασκευές πορτών pvc" href="/pvc-balkonoportes/">Ειδικές κατασκευές πορτών pvc</a>
       </div>
     </div>
     <div class="column">
@@ -71,6 +74,7 @@
       <div class="pvcdesc">
         <a class="hed4" title="Μονόφυλλες μπαλκονόπορτες pvc" href="/pvc-balkonoportes/">Μονόφυλλες μπαλκονόπορτες pvc</a>
         <a class="hed4" title="Δίφυλλες μπαλκονόπορτες pvc" href="/pvc-balkonoportes/">Δίφυλλες μπαλκονόπορτες pvc</a>
+        <a class="hed4" title="Ειδικές κατασκευές pvc" href="/pvc-balkonoportes/">Ειδικές κατασκευές pvc</a>
       </div>
     </div>
     <div class="column">
@@ -79,6 +83,7 @@
       <div class="pvcdesc">
         <a class="hed4" title="Κουζινόπορτες pvc" href="/pvc-balkonoportes/">Μονόφυλλες κουζινόπορτες pvc</a>
         <a class="hed4" title="Δίφυλλες κουζινόπορτες pvc" href="/pvc-balkonoportes/">Δίφυλλες κουζινόπορτες pvc</a>
+        <a class="hed4" title="Ειδικές κατασκευές κουζινόπορτας pvc" href="/pvc-balkonoportes/">Ειδικές κατασκευές κουζινόπορτας pvc</a>
       </div>
     </div>
   </div>
@@ -94,6 +99,7 @@
       <div class="pvcdesc">
         <a class="hed4" title="Ηλεκτρικά ρολά pvc" href="/pvc-rola/">Ηλεκτρικά ρολά pvc</a>
         <a class="hed4" title="Χειροκίνητα ρολά pvc" href="/pvc-rola/">Χειροκίνητα ρολά pvc</a>
+        <a class="hed4" title="Ρολά βαρέως τύπου" href="/pvc-rola/">Ρολά βαρέως τύπου</a>
       </div>
     </div>
     <div class="column">
@@ -145,6 +151,12 @@
 
 <div class="sepp"></div>
 <div class="containerpvc">
+  <p class="titlos3">Άρθρα από το blog</p>
+  <h2 class="titlos2">Κουφώματα PVC ή Αλουμινίου;</h2>
+  <p class="basii">Η στιγμή που πρέπει να επιλέξουμε κουφώματα για το σπίτι μας μπορεί να αποδειχθεί μία αρκετά κρίσιμη αγοραστική απόφαση. Τα κουφώματα δίνουν υπεραξία στο χώρο μας και μας προστατεύουν από τις καιρικές συνθήκες και θόρυβο. Στην αγορά υπάρχουν κουφώματα με πολλά διαφορετικά χαρακτηριστικά· αυτό που τα διαχωρίζει σε μεγάλο βαθμό είναι η ποιότητα από την οποία είναι κατασκευασμένα.</p>
+  <p class="basii">Για πολλά χρόνια τα κουφώματα από αλουμίνιο μονοπωλούσαν την ελληνική αγορά. Τα τελευταία χρόνια η παραγωγή κουφωμάτων από συνθετικό pvc ακμάζει καθώς τα συνθετικά κουφώματα έχουν πολλά πλεονεκτήματα: <strong>πολύ χαμηλότερο κόστος αγοράς</strong>, θερμομόνωση και ηχομόνωση έως και 74%, ευρεία γκάμα χρωμάτων, ανθεκτικότητα στον ήλιο και στη ρύπανση, εγγύηση 12 ετών. Λόγω των θερμομονωτικών τους ιδιοτήτων σας εξοικονομούν χρήματα από τα πάγια θέρμανσης/ψύξης. Τα χαμηλά έως ανύπαρκτα κόστη συντήρησης τα καθιστούν την πιο συμφέρουσα επιλογή σε σχέση ποιότητας και τιμής.</p>
+  <p class="basii"><strong>ΠΡΟΣΟΧΗ:</strong> Δεν είναι όλα τα pvc κουφώματα ίδια. Τα κουφώματα pvc της PVCOUTLET® αποτελούν εγγυημένα την καλύτερη λύση. Διαθέτουμε εμπειρία 40 ετών και εξειδικευμένο συνεργείο σε όλη την Ελλάδα. Υψηλή ηχομόνωση και θερμομόνωση, παγκόσμια πρότυπα.</p>
+  <div class="sepp"></div>
   <p class="titlos3">Τα πλεονεκτήματα των κουφωμάτων PVC</p>
   <p class="basii2"><span class="nname" style="color:yellow;">ΠΡΟΣΟΧΗ:</span> δεν είναι όλα τα pvc κουφώματα ίδια. Τα κουφώματα pvc της PVCOUTLET® είναι η καλύτερη λύση. <span class="nname">40 χρόνια εμπειρίας</span>, <span class="nname">εξειδικευμένο συνεργείο</span> σε όλη την <span class="nname">Ελλάδα</span>. Υψηλή ηχομόνωση και θερμομόνωση, παγκόσμια πρότυπα.</p>
   <div class="row">
