--- a/src/_includes/hero.njk
+++ b/src/_includes/hero.njk
@@ -1,3 +1,4 @@
 <div class="mainsl" id="eikona">
+  <img class="hero-bg" src="/img/img1.webp" alt="Κουφώματα PVC {{ site.name }}" width="1920" height="700" fetchpriority="high" decoding="async">
   <div class="centeredpvc"><h1 id="tilak">{{ h1 }}</h1></div>
 </div>
