--- a/src/_includes/hero.njk
+++ b/src/_includes/hero.njk
@@ -1,4 +1,4 @@
 <div class="mainsl" id="eikona">
-  <img class="hero-bg" src="/img/img1.webp" alt="Κουφώματα PVC {{ site.name }}" width="1920" height="700" fetchpriority="high" decoding="async">
+  {% image "img/img1.webp", "Κουφώματα PVC " ~ site.name, 1200, 700, "hero-bg", "eager", "high" %}
   <div class="centeredpvc"><h1 id="tilak">{{ h1 }}</h1></div>
 </div>
